# eloqctl

./: .gitignore  .release-please-config.json  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  install.sh  rust-toolchain.toml  usage.sh  version.sh
.cargo/: config.toml
.githooks/: commit-msg  pre-commit  pre-push
concourse/: install.sh  install_test.sh  install_test.yml  one-click.sh  one-click.yaml  restore_version_table.sh  task_build.sh  task_build.yaml  task_test.sh  task_test.yaml
config/: common.toml
doc/: backup_and_dump_tools.md  cluster_mgr.md  cluster_mgr_rest.md  devtools_cmd.md  eloqctl.md  upgrade.md
docker/: build-centos7.dockerfile  build-centos8.dockerfile  build-image.bash  build-rocky9.dockerfile  build-ubuntu.dockerfile  build.bash  manifest.sh  test-centos7.dockerfile  test-centos8.dockerfile  (+3 more)
src/: lib.rs  (+2 more)
src/cluster_mgr/: Cargo.toml  build.rs  install.sh
src/cluster_mgr/config/: EloqKv.ini  EloqSql.ini  EloqSqlDynamo.ini  alert.rules  cassandra_template.yaml  centos_runtime_deps  demo-EloqKV.yaml  demo-EloqSQL.yaml  demo-maria.yaml  demo-monograph.yaml  demo-redis.yaml  deployment.yaml  deployment_kv.yaml  deployment_mysql.sql  deployment_sql.yaml  deployment_sqlite.sql  eloqproxy.ini  eloqsql.ini  eloqsql_dynamo.ini  feishu.zh.tmpl  grafana_dashboards.yaml  hardware.sh  jvm11-server.template  mono_alertmanager.yaml  mono_prometheus.yaml  monograph_install_db.template  my_template.cnf  my_template_dynamo.cnf  playground.yaml  redis_template.ini  remote_env  runtime_deps_rhel  runtime_deps_ubuntu  start_monographdb.template  start_tx_log.bash  start_tx_log.template  ubuntu_runtime_deps
src/cluster_mgr/config/dashboard/eloqkv/: eloqkv-overview-eloqstore.json  eloqkv-overview.json
src/cluster_mgr/config/dashboard/eloqsql/: eloqsql-overview.json
src/cluster_mgr/config/dashboard/monograph/: Monograph-Overview.json  Overview.json
src/cluster_mgr/config/dashboard/monosql/: monosql-overview.json
src/cluster_mgr/config/dashboard/mysql/: monograph-mysql.json
src/cluster_mgr/config/dashboard/node/: host-metrics.json
src/cluster_mgr/config/dashboard/tx_service/: overview.json  tx_service-1679034604481.json
src/cluster_mgr/config/examples/: eloqctl_single_node_localhost.yaml  eloqkv_cassandra.yaml  eloqkv_codis.yaml  eloqkv_eloqstore_cloud.yaml  eloqkv_eloqstore_cloud_standby_with_voter.yaml  eloqkv_eloqstore_local.yaml  eloqkv_memory_multi_ng.yaml  eloqkv_memory_with_standby.yaml  eloqkv_proxy.yaml  eloqkv_rocks_eloqdss_rocksdb.yaml  eloqkv_rocks_gcp.yaml  eloqkv_rocks_minio.yaml  eloqkv_rocks_s3.yaml  eloqkv_rocks_s3_standby_withvoter_with_log.yaml  eloqkv_rocksdb.yaml  eloqkv_rocksdb_multiple_ng.yaml  eloqkv_rocksdb_standby.yaml  eloqkv_rocksdb_standby_with_log.yaml  eloqkv_rocksdb_standby_with_voter.yaml  eloqkv_rocksdb_standby_with_voter_multi_node.yaml  eloqkv_rocksdb_standby_with_voter_with_log.yaml  eloqsql_cassandra.yaml  eloqsql_scylla.yaml
src/cluster_mgr/proto/: cc_request.proto
src/cluster_mgr/src/: github_release.rs  lib.rs  main.rs
src/cluster_mgr/src/cli/: cmd_base.rs  cmd_printer.rs  config.rs  mod.rs  reconcile.rs  util.rs
src/cluster_mgr/src/cli/ssh/: mod.rs
src/cluster_mgr/src/cli/task/: backup_task.rs  backup_utils.rs  cassandra_ctl_task.rs  cassandra_op_task.rs  check_task.rs  check_tx_cluster_scale_status_task.rs  cluster_config_utils.rs  codis_task.rs  config_fields.rs  copy_task.rs  download_task.rs  eloq_store_data_clean_task.rs  eloq_tx_ctl_task.rs  eloqstore_cloud_delete_task.rs  eloqstore_cloud_restore_task.rs  exec_custom_cmd.rs  failover_op_task.rs  failover_task_group.rs  grpc.rs  grpc_log.rs  ini_config_update_task.rs  install_dep_pkg.rs  local_backup_delete_task.rs  local_copy_task.rs  local_extract_task.rs  mod.rs  monitor_ctl_task.rs  monograph_bootstrap_task.rs  monograph_ctl_task.rs  monograph_dss_ctl_task.rs  monograph_install_task.rs  monograph_log_ctl_task.rs  monograph_log_probe_task.rs  monograph_tx_ctl_task.rs  proxy_ctl_task.rs  rclone_config_task.rs  rclone_ctl_task.rs  rclone_dir_task.rs  redis_op_task.rs  runtime_deps_install.rs  (+17 more)
src/cluster_mgr/src/cli/task/group/: backup_group.rs  bootstrap_group.rs  check_group.rs  custom_cmd_group.rs  db_cluster_ctrl_group.rs  deployment_group.rs  failover_group.rs  install_dep_pkg.rs  launch_group.rs  log_srv_ctl_group.rs  mod.rs  monitor_ctl_group.rs  play_group.rs  proxy_ctl_group.rs  remove_group.rs  scale_group.rs  scale_log_group.rs  update_cluster_group.rs  update_config_group.rs  upgrade_cluster_group.rs
src/cluster_mgr/src/cli/task/rolling_upgrade/: mod.rs  steps.rs
src/cluster_mgr/src/cli/task/upload/: cass_conf_upload_builder.rs  codis_upload.rs  data_dir_upload_builder.rs  eloq_upload_builder.rs  mod.rs  monitor_upload_builder.rs  monograph_upload_builder.rs  proxy_upload_builder.rs  tx_conf_upload_builder.rs  upload_task.rs  upload_task_builder.rs
src/cluster_mgr/src/config/: config_base.rs  connection.rs  deployment.rs  log_service.rs  mod.rs  monitor.rs  proxy_config_base.rs  proxy_service.rs  storage_service_config.rs
src/cluster_mgr/src/state/: deployment_operation.rs  mod.rs  proxy_operation.rs  scale_operation.rs  snapshot_info_operation.rs  state_base.rs  state_mgr.rs  task_status_operation.rs  topology_log_operation.rs  topology_tx_operation.rs
src/cluster_mgr/src/web/: mod.rs  server.rs  web_handler.rs
src/devtools/: Cargo.toml
src/devtools/config/: cassandra.toml  common-template.toml  common.toml
src/devtools/config/mysql/: init.sql  mysql_template.cnf
src/devtools/src/: lib.rs  main.rs  term.rs
src/devtools/src/cmd/: base.rs  check_mysql_status.rs  check_user_exists.rs  cmd_const.rs  cmd_runner.rs  cmd_utils.rs  ctl_mysql_process.rs  download_third_party.rs  exec_init_sql_script.rs  gen_mysql_cnf.rs  git_clone_source.rs  init_db.rs  install_deps.rs  install_dev_deps.rs  mod.rs  mysql_ctl_util.rs  playground.rs  setup_workspace.rs
src/devtools/src/config/: common.rs  config_macro.rs  mod.rs
src/rest_api/: Cargo.toml
src/rest_api/src/: global_handler.rs  handler.rs  lib.rs  main.rs  server.rs
(+91 files in other folders)
