[package]
name = "cluster_mgr"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdrs-tokio = "7.0.4"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
configparser = { version = "3.0.2", features = ["indexmap"] }
crossbeam-channel = "0.5"
dirs = "4"
dyn-clone = "1"
futures = { version = "0.3", default-features = false, features = ["alloc", "thread-pool"] }
futures-async-stream = "0.2"
indexmap = "1.9.2"
indicatif = "0.17"
itertools = "0.10.5"
local-ip-address = "0.5"
num-bigint-dig = "0.8"
owo-colors = "3"
reqwest = { version = "0.11", features = ["json", "stream"] }
russh = "0.36.0"
russh-config = "0.7.0"
russh-keys = "0.24.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "mysql", "macros", "chrono"] }
strum_macros = "0.24"
sysinfo = "0.27"
tabled = { version = "0.10.0", features = ["color", "derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["alloc", "ansi", "env-filter", "fmt", "matchers", "once_cell", "parking_lot", "regex", "registry", "sharded-slab", "smallvec", "std", "thread_local", "time", "tracing", "tracing-log"] }
url = { version = "2", features = ["serde"] }
