[package]
name = "cluster_mgr"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdrs-tokio = "8.1.2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
configparser = { version = "3.0.2", features = ["indexmap"] }
crossbeam-channel = "0.5"
dirs = "5.0.1"
dyn-clone = "1"
futures = { version = "0.3", default-features = false, features = ["alloc", "thread-pool"] }
futures-async-stream = "0.2"
indexmap = "2.1.0"
indicatif = "0.17"
itertools = "0.12.0"
local-ip-address = "0.5"
num-bigint-dig = "0.8"
owo-colors = "4.0.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
russh = "0.40.2"
russh-config = "0.7.0"
russh-keys = "0.40.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.7.3", features = ["runtime-tokio-native-tls", "sqlite", "mysql", "macros", "chrono"] }
strum_macros = "0.25.3"
sysinfo = "0.30.0"
tabled = { version = "0.10.0", features = ["color", "derive"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["alloc", "ansi", "env-filter", "fmt", "matchers", "once_cell", "parking_lot", "regex", "registry", "sharded-slab", "smallvec", "std", "thread_local", "time", "tracing", "tracing-log"] }
url = { version = "2", features = ["serde"] }
walkdir = "2"
rust-ini = "0.20.0"
once_cell = "1.18.0"
whoami = "1.4.1"
users = "0.11.0"
regex = "1.10.2"
redis = "0.24.0"