[package]
name = "cluster_mgr"
version.workspace = true
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
cdrs-tokio = "8.1.2"
clap = { version = "4.2", features = ["derive"] }
clap_complete = "4.5"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"
configparser = { version = "3.0.2", features = ["indexmap"] }
crossbeam-channel = "0.5"
dirs = "5.0.1"
dyn-clone = "1"
futures = { version = "0.3", default-features = false, features = [
    "alloc",
    "thread-pool",
] }
futures-async-stream = "0.2"
indexmap = "2.1.0"
indicatif = "0.17"
itertools = "0.12.0"
local-ip-address = "0.5"
num-bigint-dig = "0.8.6"
owo-colors = "4.0.0"
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json", "stream"] }
russh = { version = "0.42.0", features = ["openssl"] }
russh-config = "0.7.0"
russh-keys = "0.42.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_with = "1.6.1"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "mysql",
    "macros",
    "chrono",
] }
strum_macros = "0.25.3"
sysinfo = "0.30.0"
tabled = "0.15.0"
thiserror = "1"
tonic = { version = "0.9", features = ["transport"] }
tokio = { version = "1", features = ["full"] }
prost = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "alloc",
    "ansi",
    "env-filter",
    "fmt",
    "matchers",
    "once_cell",
    "parking_lot",
    "regex",
    "registry",
    "sharded-slab",
    "smallvec",
    "std",
    "thread_local",
    "time",
    "tracing",
    "tracing-log",
] }
url = { version = "2", features = ["serde"] }
walkdir = "2"
rust-ini = "0.20.0"
once_cell = "1.18.0"
whoami = "1.4.1"
users = "0.11.0"
regex = "1.10.2"
toml = "0.8.10"
tokio-postgres = "0.7.10"
redis = { version = "0.32.7", features = ["cluster", "cluster-async", "aio", "tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
prettytable = "0.10.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"

[build-dependencies]
tonic-build = "0.9"
