[package]
name = "devtools"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
configparser = { version = "3.0.0", features = ["indexmap"] }
dialoguer = { version = "0.10", features = ["history", "completion", "fuzzy-select"] }
futures = "0.3"
futures-util = "0.3"
indicatif = "0.17"
libc = "0.2"
once_cell = "1"
os_pipe = "1"
reqwest = { version = "0.11", features = ["stream", "json"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
sysinfo = "0.26"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
