[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-server = "2"
actix-web = "4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
cluster_mgr = { path = "../cluster_mgr" }
crossbeam-channel = "0.5"
derive_more = "0.99"
itertools = "0.10.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "alloc",
    "ansi",
    "env-filter",
    "fmt",
    "matchers",
    "once_cell",
    "parking_lot",
    "regex",
    "registry",
    "sharded-slab",
    "smallvec",
    "std",
    "thread_local",
    "time",
    "tracing",
    "tracing-log",
] }
